# aster_voxels

./: Cargo.toml  README.md  aster_voxels.code-workspace
assets/: download (1).jfif  download (2).jfif  download (3).jfif  download (4).jfif  download (5).jfif  download (6).jfif  download (7).jfif  download.jfif  save_file.json
assets/Saves/: .json  Astoria2.json  Astoria3.json  AstoriaOne.json  BlipoGogo.json  Full Adder.json  FullAdder.json  NewTest.json  Speed Trial.json  Test World 19.json  Tester X86.json  World Name.json  World Test 1.json  World Test 2.json  World Tester.json  test 3.json  test 5 .json
assets/Settings/: settings.json
assets/TexturePack/: save_file.json
src/: Notes.txt  a_loading.rs  b_voxel_setup.rs  config.rs  debug.rs  depricrated  hotbar.rs  main.rs  player.rs  temp.rs  v_audio.rs  v_bench.rs  v_components.rs  v_config.rs  v_debug.rs  v_graphics.rs  v_graphics_helper.rs  v_hotbar.rs  v_in_game_menu.rs  v_lib.rs  v_lighting.rs  v_main_menu.rs  v_performance.rs  v_player.rs  v_player2.rs  v_plugins.rs  v_pre_main_menu.rs  v_save.rs  v_selector.rs  v_settings.rs  v_simulation.rs  v_structure.rs  v_ui.rs  v_widgets.rs  v_worldgen.rs  voxel.rs  voxel_assets.rs  voxel_graphics.rs  voxel_init.rs  voxel_lib.rs  (+4 more)
