[package]
name = "aster_voxels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
bevy_flycam = "0.12.0"
bevy_atmosphere = "0.8.1"
bevy_mod_raycast = "0.16.0"
bevy_egui = "0.23.0"
sysinfo = "0.30.3"
