[package]
name = "aster_voxels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
bevy_flycam = "0.12.0"
bevy_atmosphere = "0.8.1"
bevy_mod_raycast = "0.16.0"
bevy_egui = "0.24.0"
sysinfo = "0.30.3"
rand = "0.8.5"
bevy_rapier3d = "0.23.0"
bevy_fps_controller = "0.2.4"
bevy_save = "0.13.0"
serde = "1.0.196"
ron = "0.8.1"
serde_json = "1.0.113"