[package]
name = "aster_voxels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
bevy_atmosphere = "0.9.0"
bevy_mod_raycast = "0.17.0"
bevy_egui = "0.26.0"
bevy_rapier3d = "0.25.0"
bevy_fps_controller = "0.2.5"
bevy_math = "0.13.0"

rand = "0.8.5"
serde = "1.0.196"
ron = "0.8.1"
serde_json = "1.0.113"
chrono = "0.4.38" 